# pdf2md

./: .gitignore  main.py  pyproject.toml
.github/workflows/: ci.yml
src/: api.py
src/core/: mupdf.py  pdfminer.py
src/templates/: __init__.py  instructions.md  template.j2
src/utils/: llm.py  log.py  response.py
src/utils/vision/: encode.py  inject.py  print.py  types.py
