[project]
name = "pdf2md"
version = "0"
requires-python = ">=3.12"
dependencies = [
    "fastapi~=0.115.5",
    "httptools~=0.6.4",
    "pdfminer-six[image]>=20240706",
    "promplate-recipes~=0.2.3",
    "promplate-trace[langfuse,langsmith]~=0.3.0.dev5",
    "promplate[openai]~=0.3.4",
    "promptools[tokenizer]~=0.1.3.5",
    "rich~=13.9.4",
    "ruff~=0.8.0",
    "uvicorn~=0.34.0",
    "watchfiles~=1.0.0",
]

[tool.ruff]
line-length = 200

[tool.ruff.lint]
extend-select = [
    "F",    # flake8
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "TRY",  # tryceratops
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
]

[tool.m.aliases]
dev = "uvicorn main:app --reload --host localhost"
fmt = { cmd = "ruff format && ruff check --fix --show-fixes", shell = true }